--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@types/jwt-decode": "^3.1.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
-    "reactstrap": "^9.2.2"
+    "reactstrap": "^9.2.2",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/toastr": "^2.1.43",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
