--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.4.0",
     "jwt-decode": "^4.0.0",
+    "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
