--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "reactstrap": "^9.2.2",
+    "sweetalert2": "^11.10.7",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
