--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/jwt-decode": "^3.1.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.4.0",
     "jwt-decode": "^4.0.0",
-    "primereact": "^10.5.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
